# pyusatt

./: .gitignore  LICENSE  README.md  get_usatt.py  get_usatt_all.py  pyproject.toml  requirements-ci.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: linting.yml  testing.yml
examples/: USATT Stats Analysis.ipynb
pyusatt/: __init__.py  data.py
tests/: conftest.py  test_cli.py  test_data.py
usatt/: __init__.py  _data.py  cli.py  data.py
